asyncgit/src/lib/tui/git/tests/snapshots/gnostr_asyncgit__tui__git__tests__discard__discard_branch_no.snap
---
source: asyncgit/src/lib/tui/git/tests/discard.rs
assertion_line: 21
expression: ctx.redact_buffer()
---
 Branches                                                                       |
▌  asd                                                                          |
 * main                                                                         |
                                                                                |
 Remote origin                                                                  |
   origin/HEAD                                                                  |
   origin/main                                                                  |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
styles_hash: 8aeb733dddf67818
