asyncgit/src/lib/tui/git/tests/snapshots/gnostr_asyncgit__tui__git__tests__discard__discard_branch_yes.snap
---
source: asyncgit/src/lib/tui/git/tests/discard.rs
assertion_line: 14
expression: ctx.redact_buffer()
---
 Branches                                                                       |
▌* main                                                                         |
                                                                                |
 Remote origin                                                                  |
   origin/HEAD                                                                  |
   origin/main                                                                  |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
$ git branch -d asd                                                             |
Deleted branch asd (was b66a0bf).                                               |
styles_hash: 32a139704e30d56a
