asyncgit/src/lib/tui/git/tests/snapshots/gnostr_asyncgit__tui__git__tests__discard__discard_unstaged_hunk.snap
---
source: asyncgit/src/lib/tui/git/tests/discard.rs
assertion_line: 61
expression: ctx.redact_buffer()
---
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
styles_hash: 355101d0bd329837
