asyncgit/src/lib/tui/git/tests/snapshots/gnostr_asyncgit__tui__git__tests__discard__discard_untracked_staged_file.snap
---
source: asyncgit/src/lib/tui/git/tests/discard.rs
assertion_line: 36
expression: ctx.redact_buffer()
---
 On branch main                                                                 |
 Your branch is up to date with 'origin/main'.                                  |
                                                                                |
 Recent commits                                                                 |
▌b66a0bf main origin/main add initial-file                                      |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
$ git rm --force some-file                                                      |
rm 'some-file'                                                                  |
styles_hash: e6476ccfeefe9515
